# Mahjong

./: .gitignore  CMakeLists.txt  CmakeLists.txt  Mahjong.code-workspace  README.md  cards_class  cards_class.cpp  cards_class.h  main.cpp  player.cpp  风能3N的牌型.txt
include/: card_example.h  game_class.h  player.h
src/: card_example.cpp  cards_class.cpp  game_class.cpp  main.cpp  player.cpp
test_src/: main.cpp
